fixed an odd bug on webkit browsers whereby the rss icon was positioned lower than the others (line wrap perhaps?).

--- a/static-files/stylesheets/main.css
+++ b/static-files/stylesheets/main.css
@@ -251,11 +251,12 @@ a.more:after {
 }
 
 #footer ul.social li {
-  display: inline-block;
+  display: inline;
 }
 
 #footer ul.social li a {
-  display: inline-block;
+  display: block;
+  float: left;
   width: 48px;
   height: 48px;
   background-size: 48px;
